--- a/index.html
+++ b/index.html
@@ -126,17 +126,18 @@
                 <h2 class="text-4xl font-bold mb-12 text-center text-teal-400 fade-in-up">About Me</h2>
                 
                 <div class="flex flex-col lg:flex-row gap-12 items-center fade-in-up">
-                    <!-- Text Content (Updated to match user's plain text request) -->
+                    <!-- Text Content -->
                     <div class="lg:w-2/3 space-y-6 text-lg text-gray-300">
                         <p>As a pre-final year student of AIML at Karunya Institute of Technology and Sciences, I am a passionate AI enthusiast with a foundation built on small-scale projects. I combine strong technical skills in coding with creative expertise in video editing and digital illustration.</p>
                         <p>My profile is rounded out by proven leadership and excellent communication skills. I am dedicated to bridging theory and practice, focusing on developing scalable solutions that demonstrate the practical application of Artificial Intelligence and Machine Learning concepts.</p>
                     </div>
 
-                    <!-- Skills Badges (Unchanged) -->
+                    <!-- Skills Badges (Java Added) -->
                     <div class="lg:w-1/3 p-6 bg-gray-900 rounded-xl shadow-2xl border border-gray-700">
                         <h3 class="text-2xl font-semibold mb-4 text-white">Core Skills</h3>
                         <div class="flex flex-wrap gap-3">
                             <span class="px-3 py-1 bg-green-800 text-green-200 text-sm font-medium rounded-full">Python</span>
+                            <span class="px-3 py-1 bg-red-800 text-red-200 text-sm font-medium rounded-full">Java</span>
                             <span class="px-3 py-1 bg-cyan-800 text-cyan-200 text-sm font-medium rounded-full">Scikit-learn</span>
                             <span class="px-3 py-1 bg-cyan-800 text-cyan-200 text-sm font-medium rounded-full">Machine Learning (ML)</span>
                             <span class="px-3 py-1 bg-cyan-800 text-cyan-200 text-sm font-medium rounded-full">Pandas & NumPy</span>
@@ -283,3 +284,4 @@
     </script>
 </body>
 </html>
+
